--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="gradient">
-	<h1>back generator</h1>
+	<h1>backk generator</h1>
 	<input class = "color1"type="color" name="color1" value="#00ff00">
 	<input class = "color2"type="color" name="color1" value="#ff0000">
 	<button>Random</button>
